Fix index.html head duplication issue

--- a/index.html
+++ b/index.html
@@ -1,29 +1,74 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    
-  
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LUXÉ - Premium Fashion </title>
-    <meta name="description" content="Discover luxury fashion with premium collections inspired by high-end designers. Elegant, sophisticated, timeless." />
-    
-    <!-- Premium Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <meta name="author" content="Lovable" />
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Luxe Couture Craft</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <!-- Header -->
+  <header>
+    <h1>Luxe Couture Craft</h1>
+    <nav>
+      <a href="#home">Home</a>
+      <a href="#shop">Shop</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
-    <meta property="og:title" content="LUXÉ - Premium Fashion Collection" />
-    <meta property="og:description" content="Discover luxury fashion with premium collections inspired by high-end designers." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+  <!-- Hero Section -->
+  <section id="home" class="hero">
+    <h2>Luxury Meets Craftsmanship</h2>
+    <p>Explore our exclusive fashion collection.</p>
+    <a href="#shop" class="btn">Shop Now</a>
+  </section>
 
-   <head>
-  
+  <!-- Shop Section -->
+  <section id="shop" class="shop">
+    <h2>Our Collection</h2>
+    <div class="products">
+      <div class="product">
+        <img src="images/product1.jpg" alt="Product 1">
+        <h3>Luxury Bag</h3>
+        <p>$250</p>
+      </div>
+      <div class="product">
+        <img src="images/product2.jpg" alt="Product 2">
+        <h3>Silk Dress</h3>
+        <p>$400</p>
+      </div>
+      <div class="product">
+        <img src="images/product3.jpg" alt="Product 3">
+        <h3>Handmade Shoes</h3>
+        <p>$300</p>
+      </div>
+    </div>
+  </section>
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <!-- About Section -->
+  <section id="about" class="about">
+    <h2>About Us</h2>
+    <p>
+      Luxe Couture Craft brings timeless designs with the highest quality materials. 
+      Our artisans combine tradition and modern trends to create luxury fashion.
+    </p>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="contact">
+    <h2>Contact Us</h2>
+    <p>Email: info@luxecouturecraft.com</p>
+    <p>Phone: +123 456 7890</p>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Luxe Couture Craft. All rights reserved.</p>
+  </footer>
+
+  <!-- Scripts -->
+  <script src="script.js"></script>
+</body>
 </html>
